--- a/Volatility_Trading.ipynb
+++ b/Volatility_Trading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "789680a7",
+   "id": "009c3a4f",
    "metadata": {},
    "source": [
     "## Import Libraries"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3971a80c",
+   "id": "2fd2875a",
    "metadata": {},
    "source": [
     "## Retrieve Data"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39fa8f4f",
+   "id": "d06d0692",
    "metadata": {},
    "source": [
     "## Functionalize Backtest Engine"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b1aadd36",
+   "id": "8f406b39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "62094ba2",
+   "id": "f0d29cb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "060cb41e",
+   "id": "f3bbea93",
    "metadata": {},
    "source": [
     "### Try Out the Function!"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "df9cd080",
+   "id": "975ca484",
    "metadata": {
     "scrolled": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df91460",
+   "id": "9dee07e1",
    "metadata": {},
    "source": [
     "## Grid Search Parameters"
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09ac3f3c",
+   "id": "af7dc9fd",
    "metadata": {
     "scrolled": true
    },
@@ -298,6 +298,305 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 14 and 20 crossover for 2007..\n",
+      "\n",
+      "Training dataset from 1998 to 2007..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a9fa0a70b2045eb901ec6e82e382ce9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 14 and 20 crossover for 2008..\n",
+      "\n",
+      "Training dataset from 1999 to 2008..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70b8fbae93ca4614b1f2938dfa7f376a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 15 and 17 crossover for 2009..\n",
+      "\n",
+      "Training dataset from 2000 to 2009..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1322b05ae60d4cf4a72fc625d6ca3f4a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 15 and 17 crossover for 2010..\n",
+      "\n",
+      "Training dataset from 2001 to 2010..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c960d6de41bb4c6da059799e588d519b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 15 and 17 crossover for 2011..\n",
+      "\n",
+      "Training dataset from 2002 to 2011..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13c8e8b41fdc4f9fa36acbdde56f92d2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 15 and 17 crossover for 2012..\n",
+      "\n",
+      "Training dataset from 2003 to 2012..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d689de519a214813a79579d944753211",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 15 and 17 crossover for 2013..\n",
+      "\n",
+      "Training dataset from 2004 to 2013..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "186d6df97d0c4d02b23d03dff5eb81c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 15 and 17 crossover for 2014..\n",
+      "\n",
+      "Training dataset from 2005 to 2014..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ed1d66df38f40bea72d3398798f369c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 15 and 16 crossover for 2015..\n",
+      "\n",
+      "Training dataset from 2006 to 2015..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d638e93b1123492cae80a90cec3e5985",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 24 and 27 crossover for 2016..\n",
+      "\n",
+      "Training dataset from 2007 to 2016..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "69719545e6984e64a6b655211702b144",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 29 and 30 crossover for 2017..\n",
+      "\n",
+      "Training dataset from 2008 to 2017..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "260b8609dd2242a1af1c3fd5115e8351",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 18 and 26 crossover for 2018..\n",
+      "\n",
+      "Training dataset from 2009 to 2018..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0310e89de63d456d841a70b1db42a4d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 2 and 60 crossover for 2019..\n",
+      "\n",
+      "Training dataset from 2010 to 2019..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29ab9266fa7345e39f33b02b1c31d1eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -361,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39b7f3dd",
+   "id": "086c1ae2",
    "metadata": {},
    "source": [
     "## Visualize Performance"
@@ -370,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98847864",
+   "id": "65d600c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f485bdd",
+   "id": "1f7f853e",
    "metadata": {},
    "source": [
     "## The End"
