--- a/strategies/data_puller.ipynb
+++ b/strategies/data_puller.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = dt.datetime.today() - dt.timedelta(10)\n",
+    "start = dt.datetime.today() - dt.timedelta(20)\n",
     "end = dt.datetime.today()"
    ]
   },
@@ -43,10 +43,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\samu0\\anaconda3\\lib\\site-packages\\pandas_datareader\\base.py:272: SymbolWarning: Failed to read symbol: 'PEAK', replacing with NaN.\n",
+      "  warnings.warn(msg.format(sym), SymbolWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 10min 38s\n"
+      "Wall time: 9min 3s\n"
      ]
     }
    ],
